Don't show an attention indicator dot if there is no favicon.

BUG=784537
TEST=as in bug

Change-Id: I2c6674b735b879bad0a8bf3f188920b1f17fe15d
Reviewed-on: https://chromium-review.googlesource.com/767748
Reviewed-by: Sidney San Martín <sdy@chromium.org>
Commit-Queue: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516591}
Former-commit-id: 2b8d0d511f1ba3564db11e3b5f10f492f14099f0